# hexapod-controller-suite

./: BeagleBoneIoMux.py  Makefile.am  README  configure.ac
.metadata/.plugins/org.eclipse.cdt.core/: Hexa_Backend.1354781429985.pdom
.metadata/.plugins/org.eclipse.core.resources/.projects/Hexa_Backend/: .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/Hexa_Backend/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
Hexa_Backend/: .cproject  .project  Makefile  Makefile.am  bodypart.cc  bodypart.h  commandcontainer.cc  commandcontainer.h  hexa_be.cc  hexa_common.h  hip.cc  hip.h  hip_sagit.cc  hip_sagit.h  hipgroup.cc  hipgroup.h  joint.cc  joint.h  leg.cc  leg.h  my_types.h  servo.cc  servo.h  start_be.sh
trunk/: BeagleBoneIoMux.sh
trunk/.metadata/.plugins/org.eclipse.cdt.core/: Hexa_Backend.1354781429985.pdom
trunk/.metadata/.plugins/org.eclipse.cdt.make.core/: Hexa_Backend.sc
trunk/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
trunk/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
trunk/.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
trunk/Hexa_Backend/: .cproject  Makefile  hexa_be  hexa_be.cc  hexa_common.h  hip.cc  hip.h  hip_sagit.cc  hip_sagit.h  hipgroup.cc  hipgroup.h  joint.cc  joint.h  leg.cc  leg.h  servo.cc  servo.h  start_be.sh
(+3 files in other folders)
